--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <button class="Rock">Rock</button>
+    <button class="Paper">Paper</button>
+    <button class="Scissors">Scissors</button>
     
 </body>
 </html>
