--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
 
     <div class="results"></div>
+    <div class="score"></div>
+    <div class="winner"></div>
     
 </body>
 </html>
