Improve code design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </div>
 
     <div class="results"></div>
-    <div class="score"></div>
+    <div class="score"><br>Current Score:</div>
+        <div class="playerScore"></div>
+        <div class="computerScore"></div>
     <div class="winner"></div>
     
 </body>
