--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <button class="Scissors">Scissors</button>
     </div>
 
-    <div class="results"></div>
-    <div class="score"><br>Current Score:</div>
+    <div class="results"><br>Choose Rock, Paper, or Scissors to play against the computer.<br>
+    First to 5 wins!</div>
         <div class="playerScore"></div>
         <div class="computerScore"></div>
     <div class="winner"></div>
