Remove spacing in UI

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="Scissors">Scissors</button>
     </div>
 
-    <div class="results"><br>Choose Rock, Paper, or Scissors to play against the computer.<br>
+    <div class="results">Choose Rock, Paper, or Scissors to play against the computer.<br>
     First to 5 wins!</div>
         <div class="playerScore"></div>
         <div class="computerScore"></div>
