--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock paper scissors</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1 class="title">Rock Paper Scissors Game</h1>
+
+    <div class="instructions">Choose Rock, Paper, or Scissors to play against the computer.<br>
+    First to 5 wins!</div>
+
     <div id="buttonContainer">
         <button class="Rock">Rock</button>
         <button class="Paper">Paper</button>
         <button class="Scissors">Scissors</button>
     </div>
 
-    <div class="results">Choose Rock, Paper, or Scissors to play against the computer.<br>
-    First to 5 wins!</div>
-        <div class="playerScore"></div>
-        <div class="computerScore"></div>
+    <div class="results"></div>
+    <div class="playerScore"></div>
+    <div class="computerScore"></div>
     <div class="winner"></div>
-    
 </body>
 </html>
