Add replayGame button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     </div>
 
     <div class="results"></div>
-    <div class="playerScore"></div>
-    <div class="computerScore"></div>
+    <div id="scoreboard">
+        <div class="playerScore"></div>
+        <div class="computerScore"></div>
+    </div>
     <div class="winner"></div>
+    <button id="replayButton" style="display: none;">Play again?</button>
 </body>
 </html>
